# synode

./: .dockerignore  .env.docker.example  .env.example  .env.observability.example  .gitignore  AGENTS.md  CONTINUITY.md  Dockerfile  Dockerfile.sandbox  Dockerfile.ui  Makefile  README.md  agents.md  alembic.ini  architecture.yml  docker-compose.observability.yaml  docker-compose.sandbox.yaml  docker-compose.yaml  pyproject.toml
deploy/searxng/: settings.yml
docs/: llm_guardrails.md  mcp.md  production.md  verification.md
docs/evals/: 2026-07-01-real-local-llama31.md  2026-07-01-real-model-matrix.md  small-model-coding-pipeline.md
docs/fabricator/: README.md  experts.toml  persona-schema.md  prompting-guide.md  protocol.md  response-schema.md  routing.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_run_mode.py  0003_observability_trace_id.py  0004_threads.py  0005_configurable_agents.py  0006_runtime_operations.py  0007_agent_graph_runtime_bindings.py  0008_graph_v2_node_contracts.py  0009_drop_legacy_agent_graph_fields.py  0010_mcp_proxy.py  0011_operator_requests.py  0012_agent_graph_loop_policies.py
ops/docker/: entrypoint.sh
ops/systemd/: install-ollama-system-service.sh  ollama.service
samples/: data.csv
src/synode/: __init__.py  __main__.py  api.py  cli.py  config.py  logging.py  observability.py  registry.py  schemas.py  security.py
tests/: conftest.py  test_api.py  test_architecture_layers.py  test_configuration.py  test_evals.py  test_fabricator.py  test_model_provider.py  test_observability.py  test_orchestration.py  test_patch_validation.py  test_registry_and_routing.py  test_run_reports.py  test_sandbox.py  test_tools.py  test_worker.py
tools/: guardrails.py
web/: eslint.config.js  package-lock.json  package.json  playwright.config.ts
web/e2e/: layout-smoke.spec.ts
web/public/: env.js
(+179 files in other folders)
